--- a/index.html
+++ b/index.html
@@ -1,15 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>CSS GRID PROV</title>
-</head>
-<body>
-    <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida --- nytt test -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>6 Flex!</title>
+  </head>
+  <body>
+    <div id="wrapper">
+      <h1>1. Centrera Boxen</h1>
+      <section id="part-blue">
+        <div id="center-box"></div>
+      </section>
 
-<script src="js/script.js"></script>
-</body>
+      <h1>2. Sprid ut länkarna jämnt horisontellt</h1>
+      <section id="part-orange">
+        <a href="#">Länk 1</a>
+        <a href="#">Länk 2</a>
+        <a href="#">Länk 3</a>
+        <a href="#">Länk 4</a>
+        <a href="#">Länk 5</a>
+      </section>
+
+      <h1>3. Stapla boxarna vertikalt</h1>
+      <section id="part-pink">
+        <div class="column-box">1</div>
+        <div class="column-box">2</div>
+        <div class="column-box">3</div>
+      </section>
+
+      <h1>4. Få boxarna att "wrappas" (flera rader)</h1>
+      <section id="part-green">
+        <article>1</article>
+        <article>2</article>
+        <article>3</article>
+        <article>4</article>
+        <article>5</article>
+        <article>6</article>
+      </section>
+
+      <h1>5. Ändra ordning på boxarna</h1>
+      <section id="part-brown">
+        <article>A</article>
+        <article>B</article>
+        <article>C</article>
+        <article>D</article>
+        <article>E</article>
+      </section>
+
+      <h1>6. Den fjärde boxen ska vara dubbelt så bred som <em>en</em> av de andra tre.</h1>
+      <section id="part-grey">
+        <div>1</div>
+        <div>2<img src="img/gitarr.jpeg" alt="gitarr">
+        </div>
+        <div>3</div>
+        <div id="double-trouble">4</div>
+      </section>
+    </div>
+  </body>
 </html>
